@startuml
'https://plantuml.com/class-diagram

class RankList{}

interface PlayerDao {
    + getAllPlayers():List<Player>
    + doAdd(Player player):void
    + doDelete(String name, String time):void
    + writeFile():void
}

class PlayerDaoImpl {
    - players:List<Player>
    + PlayerDaoImpl()
    + getAllPlayers():List<Player>
    + doAdd(Player player):void
    + doDelete(String name, String time):void
    + writeFile():void
}

class Player {
    - rank:int
    - name:String
    - score:int
    - time:String
    - difficulty:String
    + getRank():int
    + setRank(int rank):void
    + getName():String
    + setName(String name):void
    + getScore():int
    + setScore(int score):void
    + getTime():String
    + setTime(String time):void
    + getDifficulty():String
    + setDifficulty(String difficulty):void
    + toString():String
    + compareTo():int
}

RankList ..> PlayerDao

PlayerDao <|.. PlayerDaoImpl

PlayerDaoImpl --> Player

Serializable <|.. Player
Comparable <|.. Player

@enduml